--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   font-family: "Amazon Ember";
@@ -15,8 +19,12 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 12px;
   background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar:hover {
+  background-color: #ee0000;
 }
 
 ::-webkit-scrollbar-thumb {
