--- a/src/App1.css
+++ b/src/App1.css
@@ -3113,11 +3113,13 @@ option {
   transform: translateY(20px);
   opacity: 0;
   display: inline-block;
-  padding: 8px 62px 8px 26px;
+  padding: 8px 32px 8px 26px;
   font-size: 16px;
   text-transform: capitalize;
   color: #ffffff;
   background: #405e77;
+  display: flex;
+  align-items: center;
   border-radius: 100px;
   position: relative;
 }
